cha-pre-live-flux2/cha-eks-5b/namespaces/syctcv-staging/namespace-syctcv-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: syctcv-staging
  name: syctcv-staging
